cmake_minimum_required(VERSION 3.24)
project(__Leet_Code_Project)

set(CMAKE_CXX_STANDARD 17)

add_executable(__Leet_Code_Project main.cpp)
add_executable(145_binary-tree-postorder-traversal 145_binary-tree-postorder-traversal.cpp)
add_executable(94_binary-tree-inorder-traversal 94_binary-tree-inorder-traversal.cpp)
add_executable(144_binary-tree-preorder-traversal 144_binary-tree-preorder-traversal.cpp)
add_executable(102_binary-tree-level-order-traversal 102_binary-tree-level-order-traversal.cpp)
add_executable(226_invert-binary-tree 226_invert-binary-tree.cpp)
add_executable(589_n-ary-tree-preorder-traversal 589_n-ary-tree-preorder-traversal.cpp)
add_executable(590_n-ary-tree-postorder-traversal 590_n-ary-tree-postorder-traversal.cpp)
add_executable(77_combinations 77_combinations.cpp)
add_executable(39_combination-sum 39_combination-sum.cpp)
add_executable(62_unique-paths 62_unique-paths.cpp)
add_executable(343_integer-break 343_integer-break.cpp)
add_executable(96_unique-binary-search-trees 96_unique-binary-search-trees.cpp)
add_executable(40_combination-sum-ii 40_combination-sum-ii.cpp)
add_executable(131_palindrome-partitioning 131_palindrome-partitioning.cpp)
add_executable(78_subsets 78_subsets.cpp)
add_executable(90_subsets-ii 90_subsets-ii.cpp)
add_executable(491_non-decreasing-subsequences 491_non-decreasing-subsequences.cpp)
add_executable(46_permutations 46_permutations.cpp)
add_executable(45_jump-game-ii 45_jump-game-ii.cpp)
add_executable(1005_maximize-sum-of-array-after-k-negations 1005_maximize-sum-of-array-after-k-negations.cpp)
add_executable(134_gas-station 134_gas-station.cpp)
add_executable(135_candy 135_candy.cpp)
add_executable(435_non-overlapping-intervals 435_non-overlapping-intervals.cpp)
add_executable(416_partition-equal-subset-sum 416_partition-equal-subset-sum.cpp)
add_executable(494_target-sum 494_target-sum.cpp)
add_executable(474_ones-and-zeroes 474_ones-and-zeroes.cpp)
add_executable(332_reconstruct-itinerary 332_reconstruct-itinerary.cpp)
add_executable(51_n-queens 51_n-queens.cpp)
add_executable(763_partition-labels 763_partition-labels.cpp)
add_executable(518_coin-change-ii 518_coin-change-ii.cpp)
add_executable(377_combination-sum-iv 377_combination-sum-iv.cpp)
add_executable(198_house-robber 198_house-robber.cpp)
add_executable(123_best-time-to-buy-and-sell-stock-iii 123_best-time-to-buy-and-sell-stock-iii.cpp)
add_executable(309_best-time-to-buy-and-sell-stock-with-cooldown 309_best-time-to-buy-and-sell-stock-with-cooldown.cpp)
add_executable(1187_make-array-strictly-increasing 1187_make-array-strictly-increasing.cpp)
add_executable(84_largest-rectangle-in-histogram 84_largest-rectangle-in-histogram.cpp)
add_executable(1031_maximum-sum-of-two-non-overlapping-subarrays 1031_maximum-sum-of-two-non-overlapping-subarrays.cpp)
add_executable(533_optimal-division 533_optimal-division.cpp)
add_executable(2602_minimum-operations-to-make-all-array-elements-equal 2602_minimum-operations-to-make-all-array-elements-equal.cpp)
add_executable(2615_sum-of-distances 2615_sum-of-distances.cpp)
add_executable(673_number-of-longest-increasing-subsequence 673_number-of-longest-increasing-subsequence.cpp)
add_executable(1425_constrained-subsequence-sum 1425_constrained-subsequence-sum.cpp)
add_executable(264_ugly-number-ii 264_ugly-number-ii.cpp)
add_executable(313_super-ugly-number 313_super-ugly-number.cpp)
add_executable(740_delete-and-earn 740_delete-and-earn.cpp)
add_executable(2106_maximum-fruits-harvested-after-at-most-k-steps 2106_maximum-fruits-harvested-after-at-most-k-steps.cpp)
add_executable(64_minimum-path-sum 64_minimum-path-sum.cpp)
add_executable(514_freedom-trail 514_freedom-trail.cpp)
add_executable(354_russian-doll-envelopes 354_russian-doll-envelopes.cpp)
add_executable(368_largest-divisible-subset 368_largest-divisible-subset.cpp)
add_executable(6418_number-of-adjacent-elements-with-the-same-color 6418_number-of-adjacent-elements-with-the-same-color.cpp)
add_executable(1263_minimum-moves-to-move-a-box-to-their-target-location 1263_minimum-moves-to-move-a-box-to-their-target-location.cpp)
add_executable(41_first-missing-positive 41_first-missing-positive.cpp)
add_executable(978_longest-turbulent-subarray 978_longest-turbulent-subarray.cpp)
add_executable(1016_binary-string-with-substrings-representing-1-to-n 1016_binary-string-with-substrings-representing-1-to-n.cpp)
add_executable(6_zigzag-conversion 6_zigzag-conversion.cpp)
add_executable(167_two-sum-ii-input-array-is-sorted 167_two-sum-ii-input-array-is-sorted.cpp)
add_executable(1066_campus-bikes-ii 1066_campus-bikes-ii.cpp)
add_executable(11_container-with-most-water 11_container-with-most-water.cpp)
add_executable(6433_maximum-number-of-moves-in-a-grid 6433_maximum-number-of-moves-in-a-grid.cpp)
add_executable(1335_minimum-difficulty-of-a-job-schedule 1335_minimum-difficulty-of-a-job-schedule.cpp)
add_executable(1277_count-square-submatrices-with-all-ones 1277_count-square-submatrices-with-all-ones.cpp)
add_executable(48_rotate-image 48_rotate-image.cpp)
add_executable(219_contains-duplicate-ii 219_contains-duplicate-ii.cpp)
add_executable(57_insert-interval 57_insert-interval.cpp)
add_executable(1079_letter-tile-possibilities 1079_letter-tile-possibilities.cpp)
add_executable(97_interleaving-string 97_interleaving-string.cpp)
add_executable(2454_next-greater-element-iv 2454_next-greater-element-iv.cpp)
add_executable(LCP33_storeWater LCP33_storeWater.cpp)
add_executable(6441_find-the-punishment-number-of-an-integer 6441_find-the-punishment-number-of-an-integer.cpp)
add_executable(241_different-ways-to-add-parentheses 241_different-ways-to-add-parentheses.cpp)
add_executable(375_guess-number-higher-or-lower-ii 375_guess-number-higher-or-lower-ii.cpp)
add_executable(2289_steps-to-make-array-non-decreasing 2289_steps-to-make-array-non-decreasing.cpp)
add_executable(1377_frog-position-after-t-seconds 1377_frog-position-after-t-seconds.cpp)
add_executable(2451_odd-string-difference 2451_odd-string-difference.cpp)
add_executable(486_predict-the-winner 486_predict-the-winner.cpp)
add_executable(92_reverse-linked-list-ii 92_reverse-linked-list-ii.cpp)
add_executable(413_arithmetic-slices 413_arithmetic-slices.cpp)
add_executable(61_rotate-list 61_rotate-list.cpp)
add_executable(1039_statistics-from-a-large-sample 1039_statistics-from-a-large-sample.cpp)
add_executable(1439_find-the-kth-smallest-sum-of-a-matrix-with-sorted-rows 1439_find-the-kth-smallest-sum-of-a-matrix-with-sorted-rows.cpp)
add_executable(2711_difference-of-number-of-distinct-values-on-diagonals 2711_difference-of-number-of-distinct-values-on-diagonals.cpp)
add_executable(460_lfu-cache 460_lfu-cache.cpp)
add_executable(1130_minimum-cost-tree-from-leaf-values 1130_minimum-cost-tree-from-leaf-values.cpp)
add_executable(909_snakes-and-ladders 909_snakes-and-ladders.cpp)
add_executable(399_evaluate-division 399_evaluate-division.cpp)
add_executable(148_sort-list 148_sort-list.cpp)
add_executable(1156_swap-for-longest-repeated-character-substring 1156_swap-for-longest-repeated-character-substring.cpp)
add_executable(79_word-search 79_word-search.cpp)
add_executable(74_search-a-2d-matrix 74_search-a-2d-matrix.cpp)
add_executable(505_the-maze-ii 505_the-maze-ii.cpp)
add_executable(499_the-maze-iii 499_the-maze-iii.cpp)
add_executable(1240_tiling-a-rectangle-with-the-fewest-squares 1240_tiling-a-rectangle-with-the-fewest-squares.cpp)
add_executable(2699_modify-graph-edge-weights 2699_modify-graph-edge-weights.cpp)
add_executable(1135_connecting-cities-with-minimum-cost 1135_connecting-cities-with-minimum-cost.cpp)
add_executable(294_flip-game-ii 294_flip-game-ii.cpp)
add_executable(351_android-unlock-patterns 351_android-unlock-patterns.cpp)
add_executable(1177_can-make-palindrome-from-substring 1177_can-make-palindrome-from-substring.cpp)
add_executable(1262_greatest-sum-divisible-by-three 1262_greatest-sum-divisible-by-three.cpp)
add_executable(2397_maximum-rows-covered-by-columns 2397_maximum-rows-covered-by-columns.cpp)
add_executable(LCP41_flipChess LCP41_flipChess.cpp)
add_executable(pond-sizes-lcci Interview/pond-sizes-lcci.cpp)
add_executable(418_sentence-screen-fitting 418_sentence-screen-fitting.cpp)
add_executable(562_longest-line-of-consecutive-one-in-matrix 562_longest-line-of-consecutive-one-in-matrix.cpp)
add_executable(651_4-keys-keyboard 651_4-keys-keyboard.cpp)
add_executable(624_maximum-distance-in-arrays 624_maximum-distance-in-arrays.cpp)
add_executable(1100_find-k-length-substrings-with-no-repeated-characters 1100_find-k-length-substrings-with-no-repeated-characters.cpp)
add_executable(249_group-shifted-strings 249_group-shifted-strings.cpp)
add_executable(311_sparse-matrix-multiplication 311_sparse-matrix-multiplication.cpp)
add_executable(723_candy-crush 723_candy-crush.cpp)
add_executable(616_add-bold-tag-in-string 616_add-bold-tag-in-string.cpp)
add_executable(16_3sum-closest 16_3sum-closest.cpp)
add_executable(255_verify-preorder-sequence-in-binary-search-tree 255_verify-preorder-sequence-in-binary-search-tree.cpp)
add_executable(1851_minimum-interval-to-include-each-query 1851_minimum-interval-to-include-each-query.cpp)
add_executable(918_maximum-sum-circular-subarray 918_maximum-sum-circular-subarray.cpp)
add_executable(1060_missing-element-in-sorted-array 1060_missing-element-in-sorted-array.cpp)
add_executable(2031_count-subarrays-with-more-ones-than-zeros 2031_count-subarrays-with-more-ones-than-zeros.cpp)
add_executable(2500_delete-greatest-value-in-each-row 2500_delete-greatest-value-in-each-row.cpp)
add_executable(281_zigzag-iterator 281_zigzag-iterator.cpp)
add_executable(722_remove-comments 722_remove-comments.cpp)
add_executable(2811_check-if-it-is-possible-to-split-array 2811_check-if-it-is-possible-to-split-array.cpp)
add_executable(2812_find-the-safest-path-in-a-grid 2812_find-the-safest-path-in-a-grid.cpp)
add_executable(2813_maximum-elegance-of-a-k-length-subsequence 2813_maximum-elegance-of-a-k-length-subsequence.cpp)
add_executable(1351_count-negative-numbers-in-a-sorted-matrix 1351_count-negative-numbers-in-a-sorted-matrix.cpp)
add_executable(2815_max-pair-sum-in-an-array 2815_max-pair-sum-in-an-array.cpp)
add_executable(33_search-in-rotated-sorted-array 33_search-in-rotated-sorted-array.cpp)
add_executable(1514_path-with-maximum-probability 1514_path-with-maximum-probability.cpp)
add_executable(2337_move-pieces-to-obtain-a-string 2337_move-pieces-to-obtain-a-string.cpp)
add_executable(2830_maximize-the-profit-as-the-salesman 2830_maximize-the-profit-as-the-salesman.cpp)