cmake_minimum_required(VERSION 3.24)
project(__Leet_Code_Project)

set(CMAKE_CXX_STANDARD 17)

include_directories(debug)

add_executable(__Leet_Code_Project main.cpp)
add_executable(145_binary-tree-postorder-traversal 1-499/145_binary-tree-postorder-traversal.cpp)
add_executable(94_binary-tree-inorder-traversal 1-499/94_binary-tree-inorder-traversal.cpp)
add_executable(144_binary-tree-preorder-traversal 1-499/144_binary-tree-preorder-traversal.cpp)
add_executable(102_binary-tree-level-order-traversal 1-499/102_binary-tree-level-order-traversal.cpp)
add_executable(226_invert-binary-tree 1-499/226_invert-binary-tree.cpp)
add_executable(589_n-ary-tree-preorder-traversal 500-999/589_n-ary-tree-preorder-traversal.cpp)
add_executable(590_n-ary-tree-postorder-traversal 500-999/590_n-ary-tree-postorder-traversal.cpp)
add_executable(77_combinations 1-499/77_combinations.cpp)
add_executable(39_combination-sum 1-499/39_combination-sum.cpp)
add_executable(62_unique-paths 1-499/62_unique-paths.cpp)
add_executable(343_integer-break 1-499/343_integer-break.cpp)
add_executable(96_unique-binary-search-trees 1-499/96_unique-binary-search-trees.cpp)
add_executable(40_combination-sum-ii 1-499/40_combination-sum-ii.cpp)
add_executable(131_palindrome-partitioning 1-499/131_palindrome-partitioning.cpp)
add_executable(78_subsets 1-499/78_subsets.cpp)
add_executable(90_subsets-ii 1-499/90_subsets-ii.cpp)
add_executable(491_non-decreasing-subsequences 1-499/491_non-decreasing-subsequences.cpp)
add_executable(46_permutations 1-499/46_permutations.cpp)
add_executable(45_jump-game-ii 1-499/45_jump-game-ii.cpp)
add_executable(1005_maximize-sum-of-array-after-k-negations 1000-1499/1005_maximize-sum-of-array-after-k-negations.cpp)
add_executable(134_gas-station 1-499/134_gas-station.cpp)
add_executable(135_candy 1-499/135_candy.cpp)
add_executable(435_non-overlapping-intervals 1-499/435_non-overlapping-intervals.cpp)
add_executable(416_partition-equal-subset-sum 1-499/416_partition-equal-subset-sum.cpp)
add_executable(494_target-sum 1-499/494_target-sum.cpp)
add_executable(474_ones-and-zeroes 1-499/474_ones-and-zeroes.cpp)
add_executable(332_reconstruct-itinerary 1-499/332_reconstruct-itinerary.cpp)
add_executable(51_n-queens 1-499/51_n-queens.cpp)
add_executable(763_partition-labels 500-999/763_partition-labels.cpp)
add_executable(518_coin-change-ii 500-999/518_coin-change-ii.cpp)
add_executable(377_combination-sum-iv 1-499/377_combination-sum-iv.cpp)
add_executable(198_house-robber 1-499/198_house-robber.cpp)
add_executable(123_best-time-to-buy-and-sell-stock-iii 1-499/123_best-time-to-buy-and-sell-stock-iii.cpp)
add_executable(309_best-time-to-buy-and-sell-stock-with-cooldown 1-499/309_best-time-to-buy-and-sell-stock-with-cooldown.cpp)
add_executable(1187_make-array-strictly-increasing 1000-1499/1187_make-array-strictly-increasing.cpp)
add_executable(84_largest-rectangle-in-histogram 1-499/84_largest-rectangle-in-histogram.cpp)
add_executable(1031_maximum-sum-of-two-non-overlapping-subarrays 1000-1499/1031_maximum-sum-of-two-non-overlapping-subarrays.cpp)
add_executable(533_optimal-division 500-999/533_optimal-division.cpp)
add_executable(2602_minimum-operations-to-make-all-array-elements-equal 2500-2999/2602_minimum-operations-to-make-all-array-elements-equal.cpp)
add_executable(2615_sum-of-distances 2500-2999/2615_sum-of-distances.cpp)
add_executable(673_number-of-longest-increasing-subsequence 500-999/673_number-of-longest-increasing-subsequence.cpp)
add_executable(1425_constrained-subsequence-sum 1000-1499/1425_constrained-subsequence-sum.cpp)
add_executable(264_ugly-number-ii 1-499/264_ugly-number-ii.cpp)
add_executable(313_super-ugly-number 1-499/313_super-ugly-number.cpp)
add_executable(740_delete-and-earn 500-999/740_delete-and-earn.cpp)
add_executable(2106_maximum-fruits-harvested-after-at-most-k-steps 2000-2499/2106_maximum-fruits-harvested-after-at-most-k-steps.cpp)
add_executable(64_minimum-path-sum 1-499/64_minimum-path-sum.cpp)
add_executable(514_freedom-trail 500-999/514_freedom-trail.cpp)
add_executable(354_russian-doll-envelopes 1-499/354_russian-doll-envelopes.cpp)
add_executable(368_largest-divisible-subset 1-499/368_largest-divisible-subset.cpp)
add_executable(6418_number-of-adjacent-elements-with-the-same-color 2500-2999/2672_number-of-adjacent-elements-with-the-same-color.cpp)
add_executable(1263_minimum-moves-to-move-a-box-to-their-target-location 1000-1499/1263_minimum-moves-to-move-a-box-to-their-target-location.cpp)
add_executable(41_first-missing-positive 1-499/41_first-missing-positive.cpp)
add_executable(978_longest-turbulent-subarray 500-999/978_longest-turbulent-subarray.cpp)
add_executable(1016_binary-string-with-substrings-representing-1-to-n 1000-1499/1016_binary-string-with-substrings-representing-1-to-n.cpp)
add_executable(6_zigzag-conversion 1-499/6_zigzag-conversion.cpp)
add_executable(167_two-sum-ii-input-array-is-sorted 1-499/167_two-sum-ii-input-array-is-sorted.cpp)
add_executable(1066_campus-bikes-ii 1000-1499/1066_campus-bikes-ii.cpp)
add_executable(11_container-with-most-water 1-499/11_container-with-most-water.cpp)
add_executable(6433_maximum-number-of-moves-in-a-grid 2500-2999/2684_maximum-number-of-moves-in-a-grid.cpp)
add_executable(1335_minimum-difficulty-of-a-job-schedule 1000-1499/1335_minimum-difficulty-of-a-job-schedule.cpp)
add_executable(1277_count-square-submatrices-with-all-ones 1000-1499/1277_count-square-submatrices-with-all-ones.cpp)
add_executable(48_rotate-image 1-499/48_rotate-image.cpp)
add_executable(219_contains-duplicate-ii 1-499/219_contains-duplicate-ii.cpp)
add_executable(57_insert-interval 1-499/57_insert-interval.cpp)
add_executable(1079_letter-tile-possibilities 1000-1499/1079_letter-tile-possibilities.cpp)
add_executable(97_interleaving-string 1-499/97_interleaving-string.cpp)
add_executable(2454_next-greater-element-iv 2000-2499/2454_next-greater-element-iv.cpp)
add_executable(LCP33_storeWater LCP/LCP33_storeWater.cpp)
add_executable(6441_find-the-punishment-number-of-an-integer 2500-2999/2698_find-the-punishment-number-of-an-integer.cpp)
add_executable(241_different-ways-to-add-parentheses 1-499/241_different-ways-to-add-parentheses.cpp)
add_executable(375_guess-number-higher-or-lower-ii 1-499/375_guess-number-higher-or-lower-ii.cpp)
add_executable(2289_steps-to-make-array-non-decreasing 2000-2499/2289_steps-to-make-array-non-decreasing.cpp)
add_executable(1377_frog-position-after-t-seconds 1000-1499/1377_frog-position-after-t-seconds.cpp)
add_executable(2451_odd-string-difference 2000-2499/2451_odd-string-difference.cpp)
add_executable(486_predict-the-winner 1-499/486_predict-the-winner.cpp)
add_executable(92_reverse-linked-list-ii 1-499/92_reverse-linked-list-ii.cpp)
add_executable(413_arithmetic-slices 1-499/413_arithmetic-slices.cpp)
add_executable(61_rotate-list 1-499/61_rotate-list.cpp)
add_executable(1039_statistics-from-a-large-sample 1000-1499/1039_statistics-from-a-large-sample.cpp)
add_executable(1439_find-the-kth-smallest-sum-of-a-matrix-with-sorted-rows 1000-1499/1439_find-the-kth-smallest-sum-of-a-matrix-with-sorted-rows.cpp)
add_executable(2711_difference-of-number-of-distinct-values-on-diagonals 2500-2999/2711_difference-of-number-of-distinct-values-on-diagonals.cpp)
add_executable(460_lfu-cache 1-499/460_lfu-cache.cpp)
add_executable(1130_minimum-cost-tree-from-leaf-values 1000-1499/1130_minimum-cost-tree-from-leaf-values.cpp)
add_executable(909_snakes-and-ladders 500-999/909_snakes-and-ladders.cpp)
add_executable(399_evaluate-division 1-499/399_evaluate-division.cpp)
add_executable(148_sort-list 1-499/148_sort-list.cpp)
add_executable(1156_swap-for-longest-repeated-character-substring 1000-1499/1156_swap-for-longest-repeated-character-substring.cpp)
add_executable(79_word-search 1-499/79_word-search.cpp)
add_executable(74_search-a-2d-matrix 1-499/74_search-a-2d-matrix.cpp)
add_executable(505_the-maze-ii 500-999/505_the-maze-ii.cpp)
add_executable(499_the-maze-iii 1-499/499_the-maze-iii.cpp)
add_executable(1240_tiling-a-rectangle-with-the-fewest-squares 1000-1499/1240_tiling-a-rectangle-with-the-fewest-squares.cpp)
add_executable(2699_modify-graph-edge-weights 2500-2999/2699_modify-graph-edge-weights.cpp)
add_executable(1135_connecting-cities-with-minimum-cost 1000-1499/1135_connecting-cities-with-minimum-cost.cpp)
add_executable(294_flip-game-ii 1-499/294_flip-game-ii.cpp)
add_executable(351_android-unlock-patterns 1-499/351_android-unlock-patterns.cpp)
add_executable(1177_can-make-palindrome-from-substring 1000-1499/1177_can-make-palindrome-from-substring.cpp)
add_executable(1262_greatest-sum-divisible-by-three 1000-1499/1262_greatest-sum-divisible-by-three.cpp)
add_executable(2397_maximum-rows-covered-by-columns 2000-2499/2397_maximum-rows-covered-by-columns.cpp)
add_executable(LCP41_flipChess LCP/LCP41_flipChess.cpp)
add_executable(pond-sizes-lcci Interview/pond-sizes-lcci.cpp)
add_executable(418_sentence-screen-fitting 1-499/418_sentence-screen-fitting.cpp)
add_executable(562_longest-line-of-consecutive-one-in-matrix 500-999/562_longest-line-of-consecutive-one-in-matrix.cpp)
add_executable(651_4-keys-keyboard 500-999/651_4-keys-keyboard.cpp)
add_executable(624_maximum-distance-in-arrays 500-999/624_maximum-distance-in-arrays.cpp)
add_executable(1100_find-k-length-substrings-with-no-repeated-characters 1000-1499/1100_find-k-length-substrings-with-no-repeated-characters.cpp)
add_executable(249_group-shifted-strings 1-499/249_group-shifted-strings.cpp)
add_executable(311_sparse-matrix-multiplication 1-499/311_sparse-matrix-multiplication.cpp)
add_executable(723_candy-crush 500-999/723_candy-crush.cpp)
add_executable(616_add-bold-tag-in-string 500-999/616_add-bold-tag-in-string.cpp)
add_executable(16_3sum-closest 1-499/16_3sum-closest.cpp)
add_executable(255_verify-preorder-sequence-in-binary-search-tree 1-499/255_verify-preorder-sequence-in-binary-search-tree.cpp)
add_executable(1851_minimum-interval-to-include-each-query 1500-1999/1851_minimum-interval-to-include-each-query.cpp)
add_executable(918_maximum-sum-circular-subarray 500-999/918_maximum-sum-circular-subarray.cpp)
add_executable(1060_missing-element-in-sorted-array 1000-1499/1060_missing-element-in-sorted-array.cpp)
add_executable(2031_count-subarrays-with-more-ones-than-zeros 2000-2499/2031_count-subarrays-with-more-ones-than-zeros.cpp)
add_executable(2500_delete-greatest-value-in-each-row 2500-2999/2500_delete-greatest-value-in-each-row.cpp)
add_executable(281_zigzag-iterator 1-499/281_zigzag-iterator.cpp)
add_executable(722_remove-comments 500-999/722_remove-comments.cpp)
add_executable(2811_check-if-it-is-possible-to-split-array 2500-2999/2811_check-if-it-is-possible-to-split-array.cpp)
add_executable(2812_find-the-safest-path-in-a-grid 2500-2999/2812_find-the-safest-path-in-a-grid.cpp)
add_executable(2813_maximum-elegance-of-a-k-length-subsequence 2500-2999/2813_maximum-elegance-of-a-k-length-subsequence.cpp)
add_executable(1351_count-negative-numbers-in-a-sorted-matrix 1000-1499/1351_count-negative-numbers-in-a-sorted-matrix.cpp)
add_executable(2815_max-pair-sum-in-an-array 2500-2999/2815_max-pair-sum-in-an-array.cpp)
add_executable(33_search-in-rotated-sorted-array 1-499/33_search-in-rotated-sorted-array.cpp)
add_executable(1514_path-with-maximum-probability 1500-1999/1514_path-with-maximum-probability.cpp)
add_executable(2337_move-pieces-to-obtain-a-string 2000-2499/2337_move-pieces-to-obtain-a-string.cpp)
add_executable(2830_maximize-the-profit-as-the-salesman 2500-2999/2830_maximize-the-profit-as-the-salesman.cpp)
add_executable(1782_count-pairs-of-nodes 1500-1999/1782_count-pairs-of-nodes.cpp)
add_executable(1858_longest-word-with-all-prefixes 1500-1999/1858_longest-word-with-all-prefixes.cpp)
add_executable(2539_count-the-number-of-good-subsequences 2500-2999/2539_count-the-number-of-good-subsequences.cpp)
add_executable(1143_longest-common-subsequence 1000-1499/1143_longest-common-subsequence.cpp)
add_executable(2511_maximum-enemy-forts-that-can-be-captured 2500-2999/2511_maximum-enemy-forts-that-can-be-captured.cpp)
add_executable(2834_find-the-minimum-possible-sum-of-a-beautiful-array 2500-2999/2834_find-the-minimum-possible-sum-of-a-beautiful-array.cpp)
add_executable(449_serialize-and-deserialize-bst 1-499/449_serialize-and-deserialize-bst.cpp)
add_executable(2836_maximize-value-of-function-in-a-ball-passing-game 2500-2999/2836_maximize-value-of-function-in-a-ball-passing-game.cpp)
add_executable(1094_car-pooling 1000-1499/1094_car-pooling.cpp)
add_executable(2911_minimum-changes-to-make-k-semi-palindromes 2500-2999/2911_minimum-changes-to-make-k-semi-palindromes.cpp)
add_executable(2558_take-gifts-from-the-richest-pile 2500-2999/2558_take-gifts-from-the-richest-pile.cpp)
add_executable(2915_length-of-the-longest-subsequence-that-sums-to-target 2500-2999/2915_length-of-the-longest-subsequence-that-sums-to-target.cpp)
add_executable(2258_escape-the-spreading-fire 2000-2499/2258_escape-the-spreading-fire.cpp)
add_executable(765_couples-holding-hands 500-999/765_couples-holding-hands.cpp)
add_executable(715_range-module 500-999/715_range-module.cpp)
add_executable(2736_maximum-sum-queries 2500-2999/2736_maximum-sum-queries.cpp)
add_executable(689_maximum-sum-of-3-non-overlapping-subarrays 500-999/689_maximum-sum-of-3-non-overlapping-subarrays.cpp)
add_executable(2216_minimum-deletions-to-make-array-beautifu 2000-2499/2216_minimum-deletions-to-make-array-beautifu.cpp)
add_executable(2304_minimum-path-cost-in-a-grid 2000-2499/2304_minimum-path-cost-in-a-grid.cpp)
add_executable(2824_count-pairs-whose-sum-is-less-than-target 2500-2999/2824_count-pairs-whose-sum-is-less-than-target.cpp)
add_executable(1457_pseudo-palindromic-paths-in-a-binary-tree 1000-1499/1457_pseudo-palindromic-paths-in-a-binary-tree.cpp)
add_executable(907_sum-of-subarray-minimums 500-999/907_sum-of-subarray-minimums.cpp)
add_executable(1670_design-front-middle-back-queue 1500-1999/1670_design-front-middle-back-queue.cpp)
add_executable(2008_maximum-earnings-from-taxi 2000-2499/2008_maximum-earnings-from-taxi.cpp)
add_executable(2048_next-greater-numerically-balanced-number 2000-2499/2048_next-greater-numerically-balanced-number.cpp)
add_executable(2132_stamping-the-grid 2000-2499/2132_stamping-the-grid.cpp)
add_executable(2415_reverse-odd-levels-of-binary-tree 2000-2499/2415_reverse-odd-levels-of-binary-tree.cpp)
add_executable(1599_maximum-profit-of-operating-a-centennial-wheel 1500-1999/1599_maximum-profit-of-operating-a-centennial-wheel.cpp)
add_executable(2182_construct-string-with-repeat-limit 2000-2499/2182_construct-string-with-repeat-limit.cpp)
add_executable(889_construct-binary-tree-from-preorder-and-postorder-traversal 500-999/889_construct-binary-tree-from-preorder-and-postorder-traversal.cpp)
add_executable(2617_minimum-number-of-visited-cells-in-a-grid 2500-2999/2617_minimum-number-of-visited-cells-in-a-grid.cpp)
add_executable(2580_count-ways-to-group-overlapping-ranges 2500-2999/2580_count-ways-to-group-overlapping-ranges.cpp)
add_executable(1766_tree-of-coprimes 1500-1999/1766_tree-of-coprimes.cpp)
add_executable(1052_grumpy-bookstore-owner 1000-1499/1052_grumpy-bookstore-owner.cpp)
add_executable(31_next-permutation 1-499/31_next-permutation.cpp)
add_executable(1329_sort-the-matrix-diagonally 1000-1499/1329_sort-the-matrix-diagonally.cpp)
add_executable(887_super-egg-drop 500-999/887_super-egg-drop.cpp)
add_executable(879_profitable-schemes 500-999/879_profitable-schemes.cpp)